// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MigrateExplorerModal.vue > Should display loading while waiting for the migration to be finalized 1`] = `
"<div class="v-dialog-stub" max-width="600" persistent="true">
  <div class="v-card v-theme--light v-card--density-default v-card--variant-elevated">
    <!---->
    <div class="v-card__loader">
      <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
        <!---->
        <div class="v-progress-linear__background"></div>
        <div class="v-progress-linear__buffer" style="width: 0%;"></div>
        <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
          <div class="v-progress-linear__indeterminate">
            <div class="v-progress-linear__indeterminate long"></div>
            <div class="v-progress-linear__indeterminate short"></div>
          </div>
        </transition-stub>
        <!---->
      </div>
    </div>
    <!---->
    <!---->
    <div class="v-card-title">
      <div class="v-progress-circular v-progress-circular--indeterminate v-theme--light text-primary mr-2" style="width: 16px; height: 16px;" role="progressbar" aria-valuemin="0" aria-valuemax="100"><svg style="transform: rotate(calc(-90deg + 0deg));" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 45.714285714285715 45.714285714285715">
          <circle class="v-progress-circular__underlay" fill="transparent" cx="50%" cy="50%" r="20" stroke-width="5.714285714285714" stroke-dasharray="125.66370614359172" stroke-dashoffset="0"></circle>
          <circle class="v-progress-circular__overlay" fill="transparent" cx="50%" cy="50%" r="20" stroke-width="5.714285714285714" stroke-dasharray="125.66370614359172" stroke-dashoffset="125.66370614359172px"></circle>
        </svg>
        <!---->
      </div> Finalizing your explorer
    </div>
    <div class="v-card-text">Your explorer is almost ready. You'll soon be able to:<ul style="list-style: none;" class="mt-2 pl-0">
        <li class="my-2"><i class="mdi-palette-outline mdi v-icon notranslate v-theme--light v-icon--size-default text-primary mr-2" aria-hidden="true"></i>Add your logo, colors, fonts</li>
        <li class="my-2"><i class="mdi-web mdi v-icon notranslate v-theme--light v-icon--size-default text-primary mr-2" aria-hidden="true"></i>Add external links</li>
        <li class="my-2"><i class="mdi-alpha-c-circle-outline mdi v-icon notranslate v-theme--light v-icon--size-default text-primary mr-2" aria-hidden="true"></i>Update your native token symbol</li>
        <li class="my-2"><i class="mdi-link mdi v-icon notranslate v-theme--light v-icon--size-default text-primary mr-2" aria-hidden="true"></i>Use your own domain name</li>
      </ul>
    </div>
    <div align="center" class="mb-4"><button type="button" class="v-btn v-btn--disabled v-theme--light bg-primary v-btn--density-default v-btn--size-default v-btn--variant-elevated" disabled=""><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
        <!----><span class="v-btn__content" data-no-activator="">Continue</span>
        <!---->
        <!---->
      </button></div>
    <!---->
    <!----><span class="v-card__underlay"></span>
  </div>
</div>"
`;

exports[`MigrateExplorerModal.vue > Should display loading while waiting for trial setup to be finalized 1`] = `
"<div class="v-dialog-stub" max-width="600" persistent="true">
  <div class="v-card v-theme--light v-card--density-default v-card--variant-elevated">
    <!---->
    <div class="v-card__loader">
      <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
        <!---->
        <div class="v-progress-linear__background"></div>
        <div class="v-progress-linear__buffer" style="width: 0%;"></div>
        <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
          <div class="v-progress-linear__indeterminate">
            <div class="v-progress-linear__indeterminate long"></div>
            <div class="v-progress-linear__indeterminate short"></div>
          </div>
        </transition-stub>
        <!---->
      </div>
    </div>
    <!---->
    <!---->
    <div class="v-card-title">
      <div class="v-progress-circular v-progress-circular--indeterminate v-theme--light text-primary mr-2" style="width: 16px; height: 16px;" role="progressbar" aria-valuemin="0" aria-valuemax="100"><svg style="transform: rotate(calc(-90deg + 0deg));" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 45.714285714285715 45.714285714285715">
          <circle class="v-progress-circular__underlay" fill="transparent" cx="50%" cy="50%" r="20" stroke-width="5.714285714285714" stroke-dasharray="125.66370614359172" stroke-dashoffset="0"></circle>
          <circle class="v-progress-circular__overlay" fill="transparent" cx="50%" cy="50%" r="20" stroke-width="5.714285714285714" stroke-dasharray="125.66370614359172" stroke-dashoffset="125.66370614359172px"></circle>
        </svg>
        <!---->
      </div> Finalizing your explorer
    </div>
    <div class="v-card-text">Your explorer is almost ready. You'll soon be able to:<ul style="list-style: none;" class="mt-2 pl-0">
        <li class="my-2"><i class="mdi-palette-outline mdi v-icon notranslate v-theme--light v-icon--size-default text-primary mr-2" aria-hidden="true"></i>Add your logo, colors, fonts</li>
        <li class="my-2"><i class="mdi-web mdi v-icon notranslate v-theme--light v-icon--size-default text-primary mr-2" aria-hidden="true"></i>Add external links</li>
        <li class="my-2"><i class="mdi-alpha-c-circle-outline mdi v-icon notranslate v-theme--light v-icon--size-default text-primary mr-2" aria-hidden="true"></i>Update your native token symbol</li>
        <li class="my-2"><i class="mdi-link mdi v-icon notranslate v-theme--light v-icon--size-default text-primary mr-2" aria-hidden="true"></i>Use your own domain name</li>
      </ul>
    </div>
    <div align="center" class="mb-4"><button type="button" class="v-btn v-btn--disabled v-theme--light bg-primary v-btn--density-default v-btn--size-default v-btn--variant-elevated" disabled=""><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
        <!----><span class="v-btn__content" data-no-activator="">Continue</span>
        <!---->
        <!---->
      </button></div>
    <!---->
    <!----><span class="v-card__underlay"></span>
  </div>
</div>"
`;

exports[`MigrateExplorerModal.vue > Should display plan selector if trial not available 1`] = `
"<div class="v-dialog-stub" max-width="1800" persistent="true">
  <div class="v-card v-theme--light v-card--density-default v-card--variant-elevated pa-4">
    <!---->
    <div class="v-card__loader">
      <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
        <!---->
        <div class="v-progress-linear__background"></div>
        <div class="v-progress-linear__buffer" style="width: 0%;"></div>
        <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
          <div class="v-progress-linear__indeterminate">
            <div class="v-progress-linear__indeterminate long"></div>
            <div class="v-progress-linear__indeterminate short"></div>
          </div>
        </transition-stub>
        <!---->
      </div>
    </div>
    <!---->
    <!---->
    <div class="v-card-title">Setup up your explorer</div>
    <div class="v-card-text"> You've already used your free trial, please choose a plan below to finalize your explorer. <div>To setup crypto payment (Team plan or above), reach out to contact@tryethernal.com.</div>
    </div>
    <explorer-plan-selector-stub explorerid="1" stripesuccessurl="http://app.ethernal.local:8080/overview?justMigrated=1" stripecancelurl="http://app.ethernal.local:8080/overview?explorerToken=token" bestvalueslug="explorer-150" istrialing="false" pendingcancelation="false"></explorer-plan-selector-stub>
    <!---->
    <!----><span class="v-card__underlay"></span>
  </div>
</div>"
`;

exports[`MigrateExplorerModal.vue > Should display success screen once migration is finalized 1`] = `
"<div class="v-dialog-stub" max-width="600" persistent="true">
  <div class="v-card v-theme--light v-card--density-default v-card--variant-elevated">
    <!---->
    <div class="v-card__loader">
      <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
        <!---->
        <div class="v-progress-linear__background"></div>
        <div class="v-progress-linear__buffer" style="width: 0%;"></div>
        <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
          <div class="v-progress-linear__indeterminate">
            <div class="v-progress-linear__indeterminate long"></div>
            <div class="v-progress-linear__indeterminate short"></div>
          </div>
        </transition-stub>
        <!---->
      </div>
    </div>
    <!---->
    <!---->
    <div class="v-card-title"><span class="text-success"><i class="mdi-check-circle-outline mdi v-icon notranslate v-theme--light v-icon--size-default text-success mr-2" aria-hidden="true"></i>Your explorer is ready! </span></div>
    <div class="v-card-text">You can now:<ul style="list-style: none;" class="mt-2 pl-0">
        <li class="my-2"><i class="mdi-palette-outline mdi v-icon notranslate v-theme--light v-icon--size-default text-primary mr-2" aria-hidden="true"></i>Add your logo, colors, fonts</li>
        <li class="my-2"><i class="mdi-web mdi v-icon notranslate v-theme--light v-icon--size-default text-primary mr-2" aria-hidden="true"></i>Add external links</li>
        <li class="my-2"><i class="mdi-alpha-c-circle-outline mdi v-icon notranslate v-theme--light v-icon--size-default text-primary mr-2" aria-hidden="true"></i>Update your native token symbol</li>
        <li class="my-2"><i class="mdi-link mdi v-icon notranslate v-theme--light v-icon--size-default text-primary mr-2" aria-hidden="true"></i>Use your own domain name</li>
      </ul>
    </div>
    <div align="center" class="mb-4"><button type="button" class="v-btn v-btn--elevated v-theme--light bg-primary v-btn--density-default v-btn--size-default v-btn--variant-elevated"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
        <!----><span class="v-btn__content" data-no-activator="">Continue</span>
        <!---->
        <!---->
      </button></div>
    <!---->
    <!----><span class="v-card__underlay"></span>
  </div>
</div>"
`;

exports[`MigrateExplorerModal.vue > Should display success screen once trial is finalized 1`] = `
"<div class="v-dialog-stub" max-width="600" persistent="true">
  <div class="v-card v-theme--light v-card--density-default v-card--variant-elevated">
    <!---->
    <div class="v-card__loader">
      <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
        <!---->
        <div class="v-progress-linear__background"></div>
        <div class="v-progress-linear__buffer" style="width: 0%;"></div>
        <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
          <div class="v-progress-linear__indeterminate">
            <div class="v-progress-linear__indeterminate long"></div>
            <div class="v-progress-linear__indeterminate short"></div>
          </div>
        </transition-stub>
        <!---->
      </div>
    </div>
    <!---->
    <!---->
    <div class="v-card-title"><span class="text-success"><i class="mdi-check-circle-outline mdi v-icon notranslate v-theme--light v-icon--size-default text-success mr-2" aria-hidden="true"></i>Your explorer is ready! </span></div>
    <div class="v-card-text">You can now:<ul style="list-style: none;" class="mt-2 pl-0">
        <li class="my-2"><i class="mdi-palette-outline mdi v-icon notranslate v-theme--light v-icon--size-default text-primary mr-2" aria-hidden="true"></i>Add your logo, colors, fonts</li>
        <li class="my-2"><i class="mdi-web mdi v-icon notranslate v-theme--light v-icon--size-default text-primary mr-2" aria-hidden="true"></i>Add external links</li>
        <li class="my-2"><i class="mdi-alpha-c-circle-outline mdi v-icon notranslate v-theme--light v-icon--size-default text-primary mr-2" aria-hidden="true"></i>Update your native token symbol</li>
        <li class="my-2"><i class="mdi-link mdi v-icon notranslate v-theme--light v-icon--size-default text-primary mr-2" aria-hidden="true"></i>Use your own domain name</li>
      </ul>
    </div>
    <div align="center" class="mb-4"><button type="button" class="v-btn v-btn--elevated v-theme--light bg-primary v-btn--density-default v-btn--size-default v-btn--variant-elevated"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
        <!----><span class="v-btn__content" data-no-activator="">Continue</span>
        <!---->
        <!---->
      </button></div>
    <!---->
    <!----><span class="v-card__underlay"></span>
  </div>
</div>"
`;
